fix: scrollbar for Python pane (#1288)
* fix: scrollbar for Python pane

--- a/game/static/game/css/game.css
+++ b/game/static/game/css/game.css
@@ -90,6 +90,16 @@
     fill: green;
 }
 
+#blockly_pane #pythonView_holder {
+    display: flex;
+    flex-direction: column;
+    height: 50%;
+}
+
+#blockly_pane #pythonView_holder .CodeMirror {
+    flex-grow: 1;
+}
+
 /**************/
 /* Python tab */
 /**************/
